--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,29 @@
-name: Deploy React App to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [main]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
+    - uses: actions/checkout@v4
+    
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
         node-version: '18'
         
     - name: Install dependencies
-      run: npm install
+      run: npm ci
       
     - name: Build
       run: npm run build
       
-    - name: Deploy to main branch
+    - name: Deploy to gh-pages branch
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
-        publish_branch: main
-        keep_files: false
-        force_orphan: true
+        publish_branch: gh-pages
