--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nexuspulse-app",
   "version": "0.1.0",
+  "homepage": "https://patrickcmartins.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
