--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "jsx-a11y/anchor-is-valid": "off",
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": {
     "production": [
